--- a/folder_style/phone.css
+++ b/folder_style/phone.css
@@ -52,102 +52,161 @@ header {
 
 /* két thúc header */
 /* main */
-.tieude2 {
-    color: #f4aef2;
-    padding: 20px 100px;
-    font-size: 30px;
-}
-
-#jodan-section {
+.tong2 {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    gap: 20px;
-}
-
-.icon-heart {
-    margin: 10px 0.1px;
-}
-
-.icon-cart {
-    margin: 20px 280px 20px;
-}
-
-.icon-heart :hover {
-    color: rgb(213, 82, 213);
-}
-
-.icon-heart :active {
-    color: yellow;
-}
-
-.product {
-    background-image: linear-gradient(180deg, #fa7979 0%, #f2eef5 100%);
-    width: 300px;
+    margin: 10px 120px;
+    background-color: rgb(249, 245, 245);
+    height: 570px;
     border-radius: 20px;
-    padding: 20px 17px;
+    margin-top: 100px;
 }
 
-.timhieuthem {
-    height: 40px;
-    width: 200px;
-    color: #f26b6b;
-    border: 2px solid #f48587;
+.left {
     margin: 10px;
+    padding: 10px 20px;
+    height: 550px;
+    background-image: linear-gradient(180deg, #55A8FC 0%, #EAD8FC 100%);
     border-radius: 20px;
+    font-family: Inter, Helvetica, sans-serif;
 }
 
-.tong {
+.left p {
+    font-size: 24px;
+    color: white;
+}
+
+/* form CSS */
+.thongtin input:focus {
+    outline: none;
+}
+
+/* clear focus border */
+.ngoai {
+    padding: 30px 0 10px 28px;
+}
+
+.phantu {
     display: flex;
 }
 
-.timhieuthem:hover {
-    color: rgb(213, 82, 213);
-    background-color: rgb(233, 229, 229);
+.phantu i {
+    color: white;
+    padding: 30px 20px 20px;
+    font-size: 24px;
 }
 
-.icons {
-    color: #f26b6b;
-    font-size: 20px;
-    width: 40px;
-    height: 40px;
-    border: 1px solid #f48587;
-    border-radius: 50%;
-    line-height: 40px;
-    text-align: center;
+.phantu p {
+    padding: 28px 0 0 20px;
 }
 
-.photo {
-    transition: all 1s ease;
-}
-
-.photo:hover {
-    transform: scale(1.1, 1.1);
-}
-
-.photo img {
-    margin-bottom: 20px;
-}
-
-.chuyentrang {
-    color: #f26b6b;
-    font-size: 20px;
-    width: 40px;
-    height: 40px;
-    border: 1px solid #f48587;
-    border-radius: 50%;
-    line-height: 40px;
-    text-align: center;
-}
-
-.pagination {
-    display: flex;
-    margin-left: 660px;
-    margin-top: 25px;
-}
-
-.chuyentrang {
+.theodoi i {
+    color: white;
+    padding: 50px 10px;
+    font-size: 24px;
     margin-left: 10px;
+}
+
+.theodoi i:hover {
+    color: red;
+}
+
+.left h1 {
+    color: white;
+    font-size: 36px;
+}
+
+.right {
+    margin: 50px 20px;
+    font-family: Inter, Helvetica, sans-serif;
+}
+
+.right label {
+    font-size: 20px;
+}
+
+.mailsdt {
+    display: flex;
+}
+
+#mail {
+    margin: 10px 0 20px 0;
+    border-top: rgb(249, 245, 245);
+    border-left: rgb(249, 245, 245);
+    border-right: rgb(249, 245, 245);
+    background-color: rgb(249, 245, 245);
+    width: 300px;
+}
+
+.div2 {
+    margin-left: 100px;
+}
+
+#sdt {
+    margin: 10px 0 20px 0;
+    border-top: rgb(249, 245, 245);
+    border-left: rgb(249, 245, 245);
+    border-right: rgb(249, 245, 245);
+    background-color: rgb(249, 245, 245);
+    width: 300px;
+}
+
+#chon2 {
+    margin-left: 20px;
+}
+
+#chon3 {
+    margin-left: 20px;
+}
+
+#chon4 {
+    margin-left: 20px;
+}
+
+#name {
+    margin: 10px 0 20px 0;
+    border-top: rgb(249, 245, 245);
+    border-left: rgb(249, 245, 245);
+    border-right: rgb(249, 245, 245);
+    background-color: rgb(249, 245, 245);
+    width: 700px;
+}
+
+.radio {
+    margin: 0 0 20px 0;
+}
+
+#khac {
+    margin-bottom: 20px;
+    border-top: rgb(249, 245, 245);
+    border-left: rgb(249, 245, 245);
+    border-right: rgb(249, 245, 245);
+    background-color: rgb(249, 245, 245);
+    width: 400px;
+}
+
+#feedback {
+    margin: 20px 0;
+    border-top: rgb(249, 245, 245);
+    border-left: rgb(249, 245, 245);
+    border-right: rgb(249, 245, 245);
+    background-color: rgb(249, 245, 245);
+    width: 700px;
+}
+
+.right p {
+    font-size: 20px;
+    padding: 20px 0;
+}
+
+#gui {
+    margin: 0 0 0 500px;
+    font-size: 20px;
+    color: white;
+    background-color: #55A8FC;
+    border: #55A8FC;
+    border-radius: 10px;
+    width: 120px;
+    height: 45px;
 }
 
 /* kt main */
