--- a/folder_style/we.css
+++ b/folder_style/we.css
@@ -52,111 +52,96 @@ header {
 
 /* két thúc header */
 /* main */
-.tieude2 {
-    color: #f4aef2;
-    padding: 20px 100px;
-    font-size: 30px;
-}
-
-#hangkhac-section {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    gap: 20px;
-}
-
-.icon-heart {
-    margin: 10px 0.1px;
-}
-
-.icon-cart {
-    margin: 20px 280px 20px;
-}
-
-.icon-heart :hover {
-    color: rgb(213, 82, 213);
-}
-
-.icon-heart :active {
-    color: yellow;
-}
-
-.product {
-    background-image: linear-gradient(180deg, #fa7979 0%, #f2eef5 100%);
-    width: 300px;
-    border-radius: 20px;
-    padding: 20px 17px;
-}
-
-.timhieuthem {
-    height: 40px;
-    width: 200px;
-    color: #f26b6b;
-    border: 2px solid #f48587;
-    margin: 10px;
-    border-radius: 20px;
-}
-
-.tong {
-    display: flex;
-}
-
-.timhieuthem:hover {
-    color: rgb(213, 82, 213);
-    background-color: rgb(233, 229, 229);
-}
-
-.icons {
-    color: #f26b6b;
-    font-size: 20px;
-    width: 40px;
-    height: 40px;
-    border: 1px solid #f48587;
-    border-radius: 50%;
-    line-height: 40px;
-    text-align: center;
-}
-
-.photo {
-    transition: all 1s ease;
-}
-
-.photo:hover {
-    transform: scale(1.1, 1.1);
-}
-
-.photo img {
-    margin-bottom: 20px;
-}
-
-.chuyentrang {
-    color: #f26b6b;
-    font-size: 20px;
-    width: 40px;
-    height: 40px;
-    border: 1px solid #f48587;
-    border-radius: 50%;
-    line-height: 40px;
-    text-align: center;
-}
-
-.pagination {
-    display: flex;
-    margin-left: 685px;
-    margin-top: 30px;
-}
-
-.chuyentrang {
-    margin-left: 10px;
-}
 
 
 /* kt main */
+.wrapper-section1-about{
+    display: flex;
+    height: 650px;
+    margin-top: 100px;
+}
+.left{
+    width: 60%;
+}
+.left p{
+    font-family: Inter, Helvetica, sans-serif;
+}
+.right{
+    margin: 30px 30px;
+}
+.left h2{
+    padding: 50px 0 50px 120px;
+    color: #55A8FC;
+    font-size: 60px;
+    font-weight: 500;
+}
+.left p{
+    font-size: 20px;
+    padding: 0 120px;
+}
+
+/* End of Css Section1 */
+
+.wrapper-section2-about{
+    height: 200px;
+    background-image: linear-gradient(180deg, #55A8FC 0%, #EAD8FC 100%);
+}
+.wrapper-section2-about h2{
+    text-align: center;
+    font-size: 60px;
+    font-weight: 500;
+    color: white;
+    padding: 30px;
+}
+
+/* End of Css Section2 */
+
+
+.wrapper-section3-about{
+    height: 400px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.block{
+    padding: 20px 40px;
+}
+.block img{
+    transition: all 1s ease;
+}
+.block img:hover{
+    transform: scale(1.1, 1.2);
+}
+
+
+/* End of Css Section3 */
+
+.wrapper-section4-about{
+    height: 700px;
+    justify-content: space-between;
+    display: flex;
+    background-image: linear-gradient(180deg, #55A8FC 0%, #EAD8FC 100%);
+}
+.tieude-section4{
+    width: 100%;
+}
+.tieude-section4 h2{
+    color: white;
+    font-size: 48px;
+    font-weight: 500;
+    padding: 100px 100px;
+}
+.right {
+    margin: 0.1px 0.1px;
+}
+.right img{
+    align-items: center;
+}
 /* footer */
 .wrapper-footer {
     display: flex;
-    justify-content: space-around;
     height: 250px;
+    justify-content: space-around;
 }
 
 .block1 {
