--- a/folder_style/trangsanpham.css
+++ b/folder_style/trangsanpham.css
@@ -1,34 +1,93 @@
-.section1{
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+a {
+    text-decoration: none;
+}
+
+header {
+    display: flex;
+    height: 100.5px;
+    background-color: white;
+    width: 100%;
+    align-items: center;
+}
+
+.logo {
+    padding: 0px 120px;
+    margin-right: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.menu {
+    color: #eb7ada;
+    padding: 30px;
+    font-size: 20px;
+    font-family: Inter, Helvetica, sans-serif;
+}
+
+.menu-trangchu {
+    display: flex;
+    gap: 40px;
+}
+
+.nameBanner {
+    color: #eb7ada;
+    padding: 30px;
+    font-size: 20px;
+    font-family: Inter, Helvetica, sans-serif;
+}
+
+.search {
+    display: flex;
+    margin-left: 100px;
+    gap: 50px;
+}
+
+/* header */
+.section1 {
     margin-top: 100px;
     display: flex;
     height: 570px;
     font-family: Inter, Helvetica, sans-serif;
 }
-.image{
+
+.image {
     padding: 10px 60px;
 }
-.right1{
-    padding: 20px ;
+
+.right1 {
+    padding: 20px;
 }
-.right1 h2{
+
+.right1 h2 {
     font-size: 40px;
     font-weight: 500;
     color: #55A8FC;
     padding: 10px;
 }
-.text{
+
+.text {
     padding: 10px;
     font-size: 24px;
 }
-.value{
+
+.value {
     color: #55A8FC;
     padding: 10px;
     font-size: 24px;
 }
-.danhgia{
+
+.danhgia {
     font-size: 24px;
     padding: 10px;
 }
+
 /* Css danh gia ngoi sao */
 .rating {
     unicode-bidi: bidi-override;
@@ -49,35 +108,40 @@
 }
 
 .rating label:hover,
-.rating label:hover ~ label,
-.rating input:checked ~ label {
+.rating label:hover~label,
+.rating input:checked~label {
     color: #ffcc00;
 }
 
 /* End of Css Section1 */
 
-.thongtin{
+.thongtin {
     margin: 10px 60px;
     font-family: Inter, Helvetica, sans-serif;
 }
-.thongtin h4{
+
+.thongtin h4 {
     color: #55A8FC;
     font-size: 30px;
     padding: 5px 0 10px 0;
     font-weight: 400;
 }
-.thongtin p{
+
+.thongtin p {
     font-size: 22px;
 }
-.danhgiacuakh{
+
+.danhgiacuakh {
     height: 150px;
     background-color: rgb(206, 205, 205);
     border-radius: 10px;
     padding: 20px 40px;
 }
-.kh{
+
+.kh {
     display: flex;
 }
+
 /* Css ngoi sao danh gia */
 
 .rating2 {
@@ -100,12 +164,12 @@
 }
 
 .rating2 label:hover,
-.rating2 label:hover ~ label,
-.rating2 input:checked ~ label {
-    color:#55A8FC;
+.rating2 label:hover~label,
+.rating2 input:checked~label {
+    color: #55A8FC;
 }
 
-.hinhanh{
+.hinhanh {
     height: 30px;
     width: 30px;
     border-radius: 100%;
@@ -113,6 +177,129 @@
     background-color: rgb(162, 162, 162);
     margin: 0 10px 5px 0;
 }
-.danhgiakh{
+
+.danhgiakh {
     margin-left: 38px;
+}
+/* end main */
+.wrapper-footer {
+    display: flex;
+    height: 250px;
+    justify-content: space-around;
+}
+
+.block1 {
+    margin: 20px 0 0 120px;
+}
+
+.block1 p {
+    font-family: Inter, Helvetica, sans-serif;
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    padding-top: 5px;
+}
+
+.block1 .icon-footer {
+    margin: 10px 0 0 0;
+}
+
+.links-container {
+    margin: 30px;
+    font-size: 13px;
+    font-family: Inter, Helvetica, sans-serif;
+}
+
+.links-container li {
+    padding-top: 5px;
+}
+
+.links-container a {
+    color: black;
+}
+
+.links-container h4 {
+    padding-bottom: 10px;
+}
+
+.links-container a:hover {
+    color: #ef7199;
+}
+
+.chinhsach a:hover {
+    color: #ef7199;
+}
+
+.chinhsach a {
+    color: black;
+}
+
+.chinhsach {
+    margin: 30px;
+    font-size: 13px;
+    font-family: Inter, Helvetica, sans-serif;
+}
+
+.chinhsach li {
+    padding-top: 5px;
+}
+
+.chinhsach h4 {
+    padding-bottom: 10px;
+}
+
+.lienhe {
+    margin: 30px;
+    font-size: 13px;
+    font-family: Inter, Helvetica, sans-serif;
+}
+
+.lienhe li {
+    padding-top: 5px;
+}
+
+.lienhe h4 {
+    padding-bottom: 10px;
+}
+
+.follow-container {
+    margin: 30px;
+    font-size: 13px;
+    font-family: Inter, Helvetica, sans-serif;
+}
+
+.follow-container h4 {
+    padding-bottom: 10px;
+}
+
+.follow-container .icon ul {
+    padding-bottom: 10px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.text.links-container {
+    color: black;
+}
+
+.icon a {
+    font-size: 20px;
+    color: black;
+}
+
+.icon a:hover {
+    color: red;
+}
+
+.wrapper-footer p {
+    color: black;
+}
+
+.wrapper-footer h4 {
+    color: black;
+}
+
+footer ul {
+    list-style: none;
 }
